// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replicate with react fiber > naming > should TitleCase component name 1`] = `
"export function ComponentName(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should support multiple components with same name 1`] = `
"export function Dupe1(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should support multiple components with same name 2`] = `
"export function Dupe2(props) {
  return <div>{"Yellow"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should support multiple components with same name 3`] = `
"import { Dupe1 } from "@/components/Dupe1";
import { Dupe2 } from "@/components/Dupe2";
export function App(props) {
  return (
    <>
      <Dupe1 />
      <Dupe2 />
    </>
  );
}
"
`;

exports[`replicate with react fiber > naming > should use default name if component name length < 3 1`] = `
"export function Component1(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > props > should convert tabIndex to number 1`] = `
"export function App(props) {
  return <div tabIndex={1} />;
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 1`] = `
"export function Common(props) {
  return (
    <div role="common">
      <div role="common">{"child"}</div>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 2`] = `
"import { Common } from "@/components/Common";
export function Child(props) {
  return <Common>{"child"}</Common>;
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 3`] = `
"import { Common } from "@/components/Common";
import { Child } from "@/components/Child";
export function Parent(props) {
  return (
    <div>
      <Common>
        <Child />
      </Common>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 4`] = `
"import { Parent } from "@/components/Parent";
export function App(props) {
  return <Parent />;
}
"
`;

exports[`replicate with react fiber > props > should recreate children that are react elements 1`] = `
"import { CompA } from "@/components/CompA";
import { CompB } from "@/components/CompB";
export function App(props) {
  return (
    <CompA>
      <CompB>
        <div>{"Hello"}</div>
      </CompB>
    </CompA>
  );
}
"
`;

exports[`replicate with react fiber > props > simple props are defined in call site 1`] = `
"export function Comp(props) {
  return <div />;
}
"
`;

exports[`replicate with react fiber > props > simple props are defined in call site 2`] = `
"import { Comp } from "@/components/Comp";
export function App(props) {
  return (
    <Comp
      enabled
      string="text"
      number={-1}
      array={[1, 2, 3]}
      object={{
        a: 1,
        b: 2,
      }}
    />
  );
}
"
`;

exports[`replicate with react fiber > should create App.tsx 1`] = `
"export function App(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create a component 1`] = `
"export function Comp(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create a component 2`] = `
"import { Comp } from "@/components/Comp";
export function App(props) {
  return <Comp />;
}
"
`;

exports[`replicate with react fiber > should create component when one instance returns null and another returns jsx 1`] = `
"import { Comp } from "@/components/Comp";
export function App(props) {
  return <Comp enabled />;
}
"
`;

exports[`replicate with react fiber > should create component when one instance returns null and another returns jsx 2`] = `
"export function Comp(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create nested components 1`] = `
"export function CompA(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create nested components 2`] = `
"import { CompA } from "@/components/CompA";
export function CompB(props) {
  return (
    <div>
      <CompA />
    </div>
  );
}
"
`;

exports[`replicate with react fiber > should create nested components 3`] = `
"import { CompB } from "@/components/CompB";
export function App(props) {
  return <CompB />;
}
"
`;

exports[`replicate with react fiber > should not create a component when returning null 1`] = `
"export function App(props) {
  return <div />;
}
"
`;

exports[`replicate with react fiber > should only create one component for memo(forwardRef(function)) 1`] = `
"export function Component2(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should only create one component for memo(forwardRef(function)) 2`] = `
"import { Component1 } from "@/components/Component1";
export function App(props) {
  return <Component1 />;
}
"
`;

exports[`replicate with react fiber > should only create one component if renders same component multiple times 1`] = `
"export function CompA(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should only create one component if renders same component multiple times 2`] = `
"import { CompA } from "@/components/CompA";
export function App(props) {
  return (
    <>
      <CompA />
      <CompA />
    </>
  );
}
"
`;

exports[`replicate with react fiber > should support inline functions 1`] = `
"export function Comp(props) {
  return (
    <>
      <div>{"1"}</div>
      <div>{"2"}</div>
      <div>{"3"}</div>
      <div>{"Hello"}</div>
    </>
  );
}
"
`;

exports[`replicate with react fiber > should support inline functions 2`] = `
"import { Comp } from "@/components/Comp";
export function App(props) {
  return <Comp />;
}
"
`;
